--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -27,7 +26,7 @@ classifiers = [
     "Topic :: Software Development :: Quality Assurance",
     "Typing :: Typed",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
     "httpx>=0.24.0",
     "pydantic>=2.0.0",
@@ -93,7 +92,7 @@ markers = [
 ]
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.9"
 strict = true
 warn_return_any = true
 warn_unused_configs = true
@@ -109,7 +108,7 @@ warn_required_dynamic_aliases = true
 # ============================================
 [tool.ruff]
 line-length = 88
-target-version = "py38"
+target-version = "py39"
 src = ["src", "tests"]
 exclude = [
     ".git",
@@ -158,10 +157,8 @@ ignore = [
     "PLR2004", # magic value comparison (HTTP status codes are standard)
     "RUF022",  # __all__ sorted (we want logical grouping)
     "TC001",   # type checking block imports (too strict for SDK)
-    "UP006",   # Use builtin types for annotations (not supported in 3.8)
-    "UP007",   # Use X | Y for type unions (not supported in 3.8/3.9)
-    "UP035",   # Use typing.X over deprecated typing aliases (not supported in 3.8)
-    "UP045",   # Use X | None for type annotations (not supported in 3.8/3.9)
+    "UP007",   # Use X | Y for type unions (not supported in 3.9)
+    "UP045",   # Use X | None for type annotations (not supported in 3.9)
 ]
 
 [tool.ruff.lint.per-file-ignores]
