--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38, py39, py310, py311, py312, py313, lint, security, type
+envlist = py39, py310, py311, py312, py313, lint, security, type
 isolated_build = true
 skip_missing_interpreters = true
 
